--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="com.cmmakerclub.iot.cmmcswitch.ConfigurationActivity">
+        tools:context=".activity.ConfigurationActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@android:drawable/ic_dialog_email" />
+            android:src="@android:drawable/ic_menu_save" />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
