--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="gray_label_color">#FF7F8C8D</color>
     <color name="no_data_color">#FFCCCCCC</color>
     <color name="blueTheme">#519af2</color>
+    <color name="splash_background">#FF293E51</color>
+
 
 </resources>
