--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#87cfc1</color>
+    <color name="colorPrimaryDark">#2f3f9f</color>
+    <color name="colorAccent">#87cfc1</color>
 
     <color name="gray_label_color">#FF7F8C8D</color>
     <color name="no_data_color">#FFCCCCCC</color>
